Automate github page generation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 8081",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules; cp -f index.html docs/; sed -i '' 's^/dist^/VueJSCheatsheet^' docs/index.html" 
   },
   "dependencies": {
     "vue": "^2.2.1"
